@@ -103,6 +103,7 @@ REM ** Setup Karaf endorsed libraries directory     **
 REM **************************************************
 set JAVA_ENDORSED_DIRS=
 set JAVA_LOCALE_COMPAT=
+set JAVA_ADD_OPENS=
 IF NOT %ISJAVA8% == 1 GOTO :SKIPENDORSEDJARS
 
 if not "%_PENTAHO_JAVA_HOME%" == "" set JAVA_ENDORSED_DIRS=%_PENTAHO_JAVA_HOME%\jre\lib\endorsed;%_PENTAHO_JAVA_HOME%\lib\endorsed;
@@ -112,6 +113,7 @@ GOTO :COLLECTARGUMENTS
 :SKIPENDORSEDJARS
 REM required for Java 11 date/time formatting backwards compatibility
 set JAVA_LOCALE_COMPAT=-Djava.locale.providers=COMPAT,SPI
+set JAVA_ADD_OPENS=--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED
 
 :COLLECTARGUMENTS
 REM **********************
@@ -145,6 +147,6 @@ REM Eventually call java instead of javaw and do not run in a separate window
 if not "%SPOON_CONSOLE%"=="1" set SPOON_START_OPTION=start %STARTTITLE%
 
 @echo on
-%SPOON_START_OPTION% "%_PENTAHO_JAVA%" %OPT% -jar launcher\launcher.jar -lib ..\%LIBSPATH% %_cmdline%
+%SPOON_START_OPTION% "%_PENTAHO_JAVA%" %JAVA_ADD_OPENS% %OPT% -jar launcher\launcher.jar -lib ..\%LIBSPATH% %_cmdline%
 @echo off
 if "%SPOON_PAUSE%"=="1" pause
