@@ -235,6 +235,7 @@ export LIBPATH
 # **************************************************
 JAVA_ENDORSED_DIRS=""
 JAVA_LOCALE_COMPAT=""
+JAVA_ADD_OPENS=""
 if $($_PENTAHO_JAVA -version 2>&1 | grep "version \"1\.8\..*" > /dev/null ) 
 then
 	if [ ! -z "$_PENTAHO_JAVA_HOME" ]; then
@@ -245,6 +246,7 @@ then
 else
 # required for Java 11 date/time formatting backwards compatibility
   JAVA_LOCALE_COMPAT="-Djava.locale.providers=COMPAT,SPI"
+  JAVA_ADD_OPENS="--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED"
 fi
 
 # ******************************************************************
@@ -271,9 +273,9 @@ inputtoexitstatus() {
 }
 
 if [ -n "${FILTER_GTK_WARNINGS}" ] ; then
-    (((("$_PENTAHO_JAVA" $OPT -jar "$STARTUP" -lib $LIBPATH "${1+$@}"  2>&1; echo $? >&3 ) | grep -viE "Gtk-WARNING|GLib-GObject|GLib-CRITICAL|^$" >&4 ) 3>&1)| inputtoexitstatus ) 4>&1
+    (((("$_PENTAHO_JAVA"  $JAVA_ADD_OPENS $OPT -jar "$STARTUP" -lib $LIBPATH "${1+$@}"  2>&1; echo $? >&3 ) | grep -viE "Gtk-WARNING|GLib-GObject|GLib-CRITICAL|^$" >&4 ) 3>&1)| inputtoexitstatus ) 4>&1
 else
-    "$_PENTAHO_JAVA" $OPT -jar "$STARTUP" -lib $LIBPATH "${1+$@}"
+    "$_PENTAHO_JAVA"  $JAVA_ADD_OPENS $OPT -jar "$STARTUP" -lib $LIBPATH "${1+$@}"
 fi
 EXIT_CODE=$?
 
